Exclusion update, added index and field description added

--- a/Microsoft Windows Security files-post.html
+++ b/Microsoft Windows Security files-post.html
@@ -1,2 +1,5 @@
 <div>
+    <b>NOTE:</b> If these files are not excluded, antivirus software might prevent appropriate access to these files, and security databases can become corrupted. Scanning these files can prevent the files from being used or might prevent a security policy from being applied to the files. These files should not be scanned because antivirus software might not correctly treat them as proprietary database files.<br />
+    These are the recommended exclusions. There might be other file types that are not included in this article that should be excluded.
+    <b>Source:</b> <a href="https://support.microsoft.com/en-us/help/822158/virus-scanning-recommendations-for-enterprise-computers-that-are-running" target="_blank">Microsoft</a>
 </div>
