--- a/Microsoft Windows Group Policy-post.html
+++ b/Microsoft Windows Group Policy-post.html
@@ -1,3 +1,4 @@
 <div>
+    <b>NOTE:</b> Group Policy exclusions apply to Windows Server only. If you're using Microsoft Defender Antivirus, Group Policy exclusions are included in automatic server role exclusions.
     <b>Source:</b> <a href="https://support.microsoft.com/en-us/help/822158/virus-scanning-recommendations-for-enterprise-computers-that-are-running" target="_blank">Microsoft</a>
 </div>
