--- a/Citrix Director-post.html
+++ b/Citrix Director-post.html
@@ -1,3 +1,5 @@
 <div>
     <b>NOTE:</b> Configure only the <a href="#microsoft-internet-information-services">IIS Exclusions</a>
+    <br />
+    <b>Source:</b> <a href="https://community.citrix.com/tech-zone/build/tech-papers/antivirus-best-practices/" target="_blank">Tech Paper: Endpoint Security, Antivirus, and Antimalware Best Practices</a>
 </div>
