--- a/Ivanti Automation Agent-post.html
+++ b/Ivanti Automation Agent-post.html
@@ -1,3 +1,5 @@
 <div>
     <b>NOTE:</b> On a 64- bit system, by default, the installation directory will exist in <b>"%ProgramFiles(x86)%"</b> instead of <b>"%ProgramFiles%"</b> on 32-bit systems.
+    <br />
+    <b>Source:</b> <a href="https://forums.ivanti.com/s/article/Ivanti-Automation-Antivirus-Best-Practices?language=en_US" target="_blank">Ivanti Automation Antivirus Best Practices</a>
 </div>
