--- a/Ivanti Workspace Control Relay Service-post.html
+++ b/Ivanti Workspace Control Relay Service-post.html
@@ -1,2 +1,3 @@
 <div>
+    <b>Source:</b> <a href="https://forums.ivanti.com/s/article/Ivanti-Workspace-Control-Antivirus-Best-Practices?language=en_US" target="_blank">Ivanti Workspace Control Antivirus Best Practices</a>
 </div>
