--- a/Microsoft FSLogix-post.html
+++ b/Microsoft FSLogix-post.html
@@ -1,2 +1,3 @@
 <div>
+    <b>Source:</b> <a href="https://learn.microsoft.com/en-us/fslogix/overview-prerequisites#configure-antivirus-file-and-folder-exclusions" target="_blank">FSlogix: Configure Antivirus file and folder exclusions</a>
 </div>
