--- a/Microsoft Teams v1 (Classic)-post.html
+++ b/Microsoft Teams v1 (Classic)-post.html
@@ -1,2 +1,3 @@
 <div>
+    <b>Source:</b> <a href="https://learn.microsoft.com/en-us/microsoftteams/troubleshoot/teams-administration/include-exclude-teams-from-antivirus-dlp#classic-teams" target="_blank">Exclude antivirus and DLP applications from blocking Teams</a>
 </div>
