--- a/Microsoft Windows Group Policy-post.html
+++ b/Microsoft Windows Group Policy-post.html
@@ -1,4 +1,6 @@
 <div>
     <div><b>NOTE:</b> Group Policy exclusions apply to Windows Server only. If you're using Microsoft Defender Antivirus, Group Policy exclusions are included in automatic server role exclusions.</div>
+    <br />
     <div><b>Source:</b> <a href="https://support.microsoft.com/en-us/help/822158/virus-scanning-recommendations-for-enterprise-computers-that-are-running" target="_blank">Microsoft</a></div>
+    <div><b>Source:</b> <a href="https://learn.microsoft.com/en-us/defender-endpoint/configure-server-exclusions-microsoft-defender-antivirus" target="_blank">Microsoft Defender Antivirus exclusions on Windows Server</a></div>
 </div>
