--- a/Citrix Session Recording Server-post.html
+++ b/Citrix Session Recording Server-post.html
@@ -1,2 +1,3 @@
 <div>
+    <b>Source:</b> <a href="https://community.citrix.com/tech-zone/build/tech-papers/antivirus-best-practices/" target="_blank">Tech Paper: Endpoint Security, Antivirus, and Antimalware Best Practices</a>
 </div>
