--- a/Citrix Workspace Environment Management Infrastructure Service-post.html
+++ b/Citrix Workspace Environment Management Infrastructure Service-post.html
@@ -1,3 +1,5 @@
 <div>
     <b>NOTE:</b> On a 64- bit system, by default, the installation directory will exist in <b>"%ProgramFiles(x86)%"</b> instead of <b>"%ProgramFiles%"</b> on 32-bit systems.
+    <br />
+    <b>Source:</b> <a href="https://community.citrix.com/tech-zone/build/tech-papers/antivirus-best-practices/" target="_blank">Tech Paper: Endpoint Security, Antivirus, and Antimalware Best Practices</a>
 </div>
