--- a/Ivanti Automation Dispatcher-post.html
+++ b/Ivanti Automation Dispatcher-post.html
@@ -1,2 +1,3 @@
 <div>
+    <b>Source:</b> <a href="https://forums.ivanti.com/s/article/Ivanti-Automation-Antivirus-Best-Practices?language=en_US" target="_blank">Ivanti Automation Antivirus Best Practices</a>
 </div>
