--- a/Microsoft Windows Active Directory Controller-post.html
+++ b/Microsoft Windows Active Directory Controller-post.html
@@ -1,3 +1,4 @@
 <div>
     <b>Source:</b> <a href="https://support.microsoft.com/en-us/help/822158/virus-scanning-recommendations-for-enterprise-computers-that-are-running" target="_blank">Microsoft</a>
+    <b>Source:</b> <a href="https://learn.microsoft.com/en-us/defender-endpoint/configure-server-exclusions-microsoft-defender-antivirus" target="_blank">Microsoft Defender Antivirus exclusions on Windows Server</a>
 </div>
