--- a/Microsoft Windows User Profile-post.html
+++ b/Microsoft Windows User Profile-post.html
@@ -1,3 +1,4 @@
 <div>
     <div><b>Source:</b> <a href="https://support.microsoft.com/en-us/help/822158/virus-scanning-recommendations-for-enterprise-computers-that-are-running" target="_blank">Microsoft</a></div>
+    <div><b>Source:</b> <a href="https://learn.microsoft.com/en-us/defender-endpoint/configure-server-exclusions-microsoft-defender-antivirus" target="_blank">Microsoft Defender Antivirus exclusions on Windows Server</a></div>
 </div>
