Add source links for Citrix antivirus guidelines and create new HTML files for User Profile Management

--- a/02-Citrix.html
+++ b/02-Citrix.html
@@ -23,4 +23,8 @@
     This can be done by altering the service start-up method to 'delayed start', or by implementing a script to
     'manually' start the services after a period of time. Virus definitions sizes tent to increase over time, this
     timeframe must be taken into account.
+    <br />
+    General source information can be found at:
+    <a href="https://support.citrix.com/s/article/CTX127030-citrix-guidelines-for-antivirus-software-configuration" target="_blank">Article: Guidelines</a>
+    <a href="https://community.citrix.com/tech-zone/build/tech-papers/antivirus-best-practices/#_=_" target="_blank">Tech Zone article</a>
 </div>
