Add note about older agent installation directory in HTML and update CSV file

--- a/Citrix Workspace Environment Management Infrastructure Service Agent-post.html
+++ b/Citrix Workspace Environment Management Infrastructure Service Agent-post.html
@@ -1,5 +1,6 @@
 '<div>
     <b>NOTE:</b> On a 64- bit system, by default, the installation directory will exist in <b>"%ProgramFiles(x86)%"</b> instead of <b>"%ProgramFiles%"</b> on 32-bit systems.
+    <b>NOTE:</b> Older versions of the agent can be installed in <b>%ProgramFiles(x86)%\Norskale\Norskale Agent Host</b>. Make sure to check the installation directory before configuring antivirus exclusions.
     <br />
     <b>Source:</b> <a href="https://community.citrix.com/tech-zone/build/tech-papers/antivirus-best-practices/" target="_blank">Tech Paper: Endpoint Security, Antivirus, and Antimalware Best Practices</a>
 </div>
